Joruri Mail Simple One リリース

--- a/app/views/layouts/admin/sys/_menu.html.erb
+++ b/app/views/layouts/admin/sys/_menu.html.erb
@@ -13,5 +13,6 @@ end
 %><%= menu_link :manager , :doc        , 'ヘルプ'       , sys_docs_path
 %><%= menu_link :manager , :user       , 'ユーザ'       , sys_groups_path(0)
 %><%= menu_link :manager , :language   , '言語'         , sys_languages_path
+%><%= menu_link :manager , :domain   , 'メールサーバ'   , sys_domains_path
 %>
 </div>
