--- a/app/views/sys/admin/users/show.html.erb
+++ b/app/views/sys/admin/users/show.html.erb
@@ -35,16 +35,21 @@
   </tr><% if false %><tr>
     <th><%= @item.locale(:role_name) %></th>
     <td><%=h @item.role_names.collect{|r| r.title}.join('，') %></td>
-  </tr><% end %>
+  </tr><% end %><tr>
+    <th><%= @item.locale(:quota) %></th>
+    <td><%=h @item.quota %></td>
+  </tr><tr>
+    <th><%= @item.locale(:aliases) %></th>
+    <td><%=h @item.aliases %></td>
 </table>
 
 <br />
 
 <table class="show">
-  <tr>
+  <!--<tr>
     <th><%= @item.locale(:ldap) %></th>
     <td><%=h @item.ldap_label %></td>
-  </tr><tr>
+  </tr>--><tr>
     <th><%= @item.locale(:password) %></th>
     <td><%=h @item.password %></td>
   <tr>
